--- a/SimTECH/SimTECH/Pages/Season/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Season/Landing.razor
@@ -67,7 +67,7 @@
                 }
                 else if (Season.State == State.Active)
                 {
-                    <MudButtonGroup Variant="Variant.Text" Color="Color.Primary">
+                    <MudButtonGroup Variant="Variant.Text" Color="Color.Primary" VerticalAlign="true">
                         <MudButton FullWidth="true" OnClick="GoToDeveloper">Development</MudButton>
                         <MudButton FullWidth="true" OnClick="TriggerFinish">Finish season</MudButton>
                     </MudButtonGroup>
