--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -17,8 +17,12 @@
             <MudGrid>
                 <MudItem xs="12" sm="6">
                     <MudPaper Elevation="2" MinHeight="300px" Class="pa-4">
-                        ΩΩΩΩΩΩλλλλλλλλλλλλλλ
-                        ΩΩΩΩΩΩλλλλλλλλλλλλλλ
+                        <MudText>
+                            ΩΩΩΩΩΩλλλλλλλλλλλλλλ
+                            ΩΩΩΩΩΩλλλλλλλλλλλλλλ
+                        </MudText>
+
+                        <ClimateIcon Icon="@IconCollection.Mist" Colour="@("#FF81219B")" />
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12" sm="6">
