--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -1,177 +1,46 @@
 ﻿@page "/raceweek/{RaceId:long}"
+@inject ClimateService _climateService
+@inject IncidentService _incidentService
+@inject ManufacturerService _manufacturerService
 @inject RaceService _raceService
+@inject SeasonService _seasonService
+@inject SeasonEntrantService _entrantService
+@inject TraitService _traitService
 @inject TyreService _tyreService
 @inject BreadcrumbProvider _bread
 @inject NavigationManager _nav
 @inject IDialogService _dialogService
 @inject ISnackbar _snack
+@using EntityRace = SimTECH.Data.Models.Race;
 
 <PageTitle>Raweceek</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     @if (!loading)
     {
-        <MudPaper id="raceweek-container">
-            <MudGrid Spacing="1">
-                <MudItem xs="12">
-                    <MudPaper MinHeight="60px" Class="pa-2">
-                        <MudStack Row="true" Spacing="0" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                            <MudStack Row="true" Spacing="0" AlignItems="AlignItems.Center" Style="width:20%">
-                                @if (Model.Race.State == State.Active)
-                                {
-                                    <MudText Typo="Typo.body2" Color="Color.Secondary">@($"FP{nextPractice}")</MudText>
-                                    <MudDivider Vertical="true" Class="mx-2" />
-                                }
+        <CascadingValue Value="@Model">
+            <MudTabs Centered="true">
+                <MudTabPanel Text="Raweceek">
 
-                                <MudText Typo="Typo.body2" Color="Color.Secondary">@nextSession</MudText>
-                            </MudStack>
+                </MudTabPanel>
+                @for (int i = 1; i <= practiceCompleted; i++)
+                {
+                    var j = i;
+                    <MudTabPanel Text="@($"FP{j}-{i}")">
 
-                            <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
+                    </MudTabPanel>
+                }
+                <MudTabPanel Text="Qualifying">
 
-                            <div class="d-flex flex-row-reverse align-center" style="width:20%">
-                                <ScreenshotButton TargetId="raceweek-container" />
-                            </div>
-                        </MudStack>
-                    </MudPaper>
-                </MudItem>
-                <MudItem xs="3">
-                    <MudPaper Class="pa-4 mud-height-full">
-                        <MudText Typo="Typo.h5">Track information</MudText>
-                        <MudDivider />
-                        <MudText Typo="Typo.body2" Color="Color.Error">This section is pretty ugly, mate</MudText>
+                </MudTabPanel>
+                <MudTabPanel Text="Race" Disabled="@raceDisabled">
 
-                        <MudListExtended T="string" Dense="true">
-                            <MudListItemExtended T="string" SecondaryText="Country">
-                                <CountryNamedFlag Code="@Model.Race.Track.Country" Size="ElementSize.Normal" Reverse="true" />
-                            </MudListItemExtended>
-                            <MudListItemExtended T="string" Text="@Model.Race.Climate.Terminology" SecondaryText="Weather">
-                                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                                    <MudIcon Icon="@Model.Race.Climate.Icon" />
-                                    <MudText>@Model.Race.Climate.Terminology</MudText>
-                                </MudStack>
-                            </MudListItemExtended>
-                            <MudListItemExtended T="string" Text="@($"{Model.Race.Track.Length}km")" SecondaryText="Length" />
-                            <MudListItemExtended T="string" Text="@($"{NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")" SecondaryText="Laps" />
-                            <MudListItemExtended T="double" Text="@Model.Race.Track.AeroMod.ToString("F2")" SecondaryText="Aero modifier" />
-                            <MudListItemExtended T="double" Text="@Model.Race.Track.ChassisMod.ToString("F2")" SecondaryText="Chassis modifier" />
-                            <MudListItemExtended T="double" Text="@Model.Race.Track.PowerMod.ToString("F2")" SecondaryText="Powertrain modifier" />
-                            <MudListItemExtended T="double" Text="@Model.Race.Track.QualifyingMod.ToString("F2")" SecondaryText="Qualifying modifier" />
-                            <MudListItemExtended T="double" Text="@Model.Race.Track.DefenseMod.ToString("F2")" SecondaryText="Defense modifier" />
-                        </MudListExtended>
+                </MudTabPanel>
+                <MudTabPanel Text="Post race" Disabled="@postraceDisabled">
 
-                        @if (Model.TrackTraits?.Any() == true)
-                        {
-                            <MudText Typo="Typo.subtitle1">Circuit traits</MudText>
-                            <MudList>
-                                @foreach (var trait in Model.TrackTraits)
-                                {
-                                    <MudListItem>
-                                        <MudStack Spacing="1">
-                                            <MudText Typo="Typo.subtitle2">@trait.Name</MudText>
-                                            <MudDivider />
-                                            <MudText Typo="Typo.body2">@trait.Description</MudText>
-                                        </MudStack>
-                                    </MudListItem>
-                                }
-                            </MudList>
-                        }
-                    </MudPaper>
-                </MudItem>
-                <MudItem xs="6">
-                    <MudPaper Class="pa-4 mud-height-full">
-                        <MudTable Items="@Model.RaceWeekDrivers.OrderBy(e => e.Grid)" Dense="true" Class="extra-dense">
-                            <ToolBarContent>
-                                <MudText Typo="Typo.h5">Starting grid</MudText>
-                            </ToolBarContent>
-                            <HeaderContent>
-                                <MudTh>Grid</MudTh>
-                                <MudTh Class="pa-0" Style="width: 5px"></MudTh>
-                                <MudTh>Name</MudTh>
-                                <MudTh Class="number-col">NO.</MudTh>
-                                <MudTh>Team</MudTh>
-                                <MudTh Class="number-col">SUPP</MudTh>
-                                <MudTh>Tyre</MudTh>
-                            </HeaderContent>
-                            <RowTemplate>
-                                <MudTd>
-                                    @if (context.Grid > Model.MaximumInRace)
-                                    {
-                                        <MudText Typo="Typo.caption">DNQ</MudText>
-                                    }
-                                    else
-                                    {
-                                        @if (context.Penalty.HasValue)
-                                        {
-                                            <MudBadge Content="@($"+{context.Penalty.Value}")"
-                                                      Color="Color.Error"
-                                                      Origin="Origin.CenterRight"
-                                                      BadgeClass="ml-1">
-                                                <DriverPosition Number="@context.Grid" />
-                                            </MudBadge>
-                                        }
-                                        else
-                                        {
-                                            <DriverPosition Number="@context.Grid" />
-                                        }
-                                    }
-                                </MudTd>
-                                <MudTd Class="accent-cell">
-                                    <SmolAccent Colour="@context.Colour" />
-                                </MudTd>
-                                <MudTd>
-                                    <MudText>@context.FullName</MudText>
-                                </MudTd>
-                                <MudTd Class="number-col">
-                                    <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
-                                </MudTd>
-                                <MudTd>
-                                    <MudText>@context.TeamName</MudText>
-                                </MudTd>
-                                <MudTd Class="number-col">
-                                    <SupplierDisplay Colour="@context.ManufacturerColour" Accent="@context.ManufacturerAccent">
-                                        @context.ManufacturerName.ElementAt(0)
-                                    </SupplierDisplay>
-                                </MudTd>
-                                <MudTd>
-                                    <MudLink OnClick="@(async () => await PickStrategy(context.ResultId))">
-                                        <TyreElement Colour="@context.Tyre.Colour">
-                                            @context.Tyre.Name.ElementAt(0)
-                                        </TyreElement>
-                                    </MudLink>
-                                </MudTd>
-                            </RowTemplate>
-                        </MudTable>
-                    </MudPaper>
-                </MudItem>
-                <MudItem xs="3">
-                    <MudPaper Class="pa-4 mud-height-full">
-                        <MudText Typo="Typo.h5">Navigators</MudText>
-                        <MudDivider />
-                        <MudText Typo="Typo.body2" Color="Color.Error" Class="mb-1">Wtf am I going to put here?</MudText>
-
-                        <MudStack Spacing="1">
-                            <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
-                                @for (int i = 1; i <= Model.PracticeCompletedCount; i++)
-                                {
-                                    int j = i;
-                                    <MudButton FullWidth="true" OnClick="@(() => GoToPractice(j))" Class="overflow-hider">FP@(j)</MudButton>
-                                }
-
-                                @if (Model.Race.State != State.Advanced && Model.Race.State != State.Closed)
-                                {
-                                    <MudButton FullWidth="true" OnClick="@(() => GoToPractice(nextPractice))" Class="overflow-hider">FP@(nextPractice)</MudButton>
-                                }
-                            </MudButtonGroup>
-                            <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GoToQualifying">Qualifying</MudButton>
-                            @if (Model.Race.State != State.Concept && Model.Race.State != State.Active)
-                            {
-                                <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GoToRace">Race</MudButton>
-                            }
-                        </MudStack>
-                    </MudPaper>
-                </MudItem>
-            </MudGrid>
-        </MudPaper>
+                </MudTabPanel>
+            </MudTabs>
+        </CascadingValue>
     }
 </MudContainer>
 
@@ -179,18 +48,53 @@
     [Parameter] public long RaceId { get; set; }
 
     public RaceWeekModel Model { get; set; }
-    private List<Tyre> Tyres { get; set; }
 
-    private bool loading = true;
-    private string nextSession = "None";
-    private int nextPractice = 1;
+    RaweCeekModel raweCeek;
+
+    private List<SeasonDriver> seasonDrivers;
+    private List<SeasonTeam> seasonTeams;
+    private List<SeasonEngine> seasonEngines;
+    private List<Result> raceResults;
+    private List<Climate> climates;
+    private List<Incident> incidents;
+    private List<Manufacturer> manufacturers;
+    private List<Tyre> tyres;
+    private List<GivenPenalty> penalties;
+
+    bool loading = true;
+    bool raceDisabled = true;
+    bool postraceDisabled = true;
+    string nextSession = "None";
+    int practiceCompleted;
+    int nextPractice = 1;
 
     protected override async Task OnInitializedAsync()
     {
         Model = await _raceService.GetRaceWeekModel(RaceId);
-        Tyres = await _tyreService.GetTyres();
 
-        nextPractice = 1 + Model.PracticeCompletedCount;
+        var race = await _raceService.GetRaceById(RaceId);
+        var season = await _seasonService.GetSeasonById(race.SeasonId);
+        var climate = climates.First(e => e.Id == race.ClimateId);
+
+        seasonDrivers = await _entrantService.GetSeasonDrivers(race.SeasonId);
+        seasonTeams = await _entrantService.GetSeasonTeams(race.SeasonId);
+        seasonEngines = await _entrantService.GetSeasonEngines(race.SeasonId);
+        raceResults = await _raceService.GetResultsOfRace(RaceId);
+        climates = await _climateService.GetClimates(StateFilter.All);
+        incidents = await _incidentService.GetIncidents(StateFilter.All);
+        manufacturers = await _manufacturerService.GetManufacturers(StateFilter.All);
+        tyres = await _tyreService.GetTyres();
+        penalties = await _raceService.GetRacePenalties(RaceId);
+        practiceCompleted = await _raceService.PracticeSessionsCompleted(RaceId);
+
+        nextPractice = 1 + practiceCompleted;
+
+        raweCeek = new RaweCeekModel
+        {
+            Race = race,
+            Climate = climate,
+            Season = season,
+        };
 
         _bread.Reset();
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
@@ -204,12 +108,92 @@
         loading = false;
     }
 
-    async Task PickStrategy(long resultId)
+    private async Task LoadDrivers(EntityRace race, Climate climate)
+    {
+        var allTraits = await _traitService.GetTraits();
+        var traits = allTraits.Where(e => !e.ForWetConditions || e.ForWetConditions == climate.IsWet).ToList();
+
+        var trackTraitIds = race.Track.TrackTraits?.Select(e => e.TraitId).ToList() ?? new();
+        var trackTraits = traits.Where(e => trackTraitIds.Contains(e.Id)).ToList();
+
+        var rawecekDrivers = new List<RaweCeekDriver>();
+        foreach (var result in raceResults)
+        {
+            var driverTraits = new List<Trait>(trackTraits);
+
+            var driver = seasonDrivers.First(e => e.Id == result.SeasonDriverId);
+            var team = seasonTeams.First(e => e.Id == result.SeasonTeamId);
+
+            var engine = seasonEngines.First(e => e.Id == team.SeasonEngineId);
+            var manufacturer = manufacturers.First(e => e.Id == team.ManufacturerId);
+
+            if (driver.Driver.DriverTraits?.Any() == true)
+                driverTraits.AddRange(traits.Where(e => driver.Driver.DriverTraits.Select(dt => dt.TraitId).Contains(e.Id)));
+            if (team.Team.TeamTraits?.Any() == true)
+                driverTraits.AddRange(traits.Where(e => team.Team.TeamTraits.Select(dt => dt.TraitId).Contains(e.Id)));
+
+            double teamModifiers = (team.Aero * race.Track?.AeroMod ?? 1)
+                    + (team.Chassis * race.Track?.ChassisMod ?? 1)
+                    + (team.Powertrain * race.Track?.PowerMod ?? 1);
+
+            var driverPower = driver.Skill + driver.RetrieveStatusBonus(5);
+            var carPower = team.BaseValue + teamModifiers.RoundDouble();
+            var enginePower = (engine.Power * climate.EngineMultiplier).RoundDouble();
+            var totalPower = driverPower + carPower + enginePower;
+
+            var actualDefense = ((driver.Defense + driverTraits.Sum(e => e.Defense)) * race.Track?.DefenseMod ?? 1.0).RoundDouble();
+
+            var raweDriver = new RaweCeekDriver
+                {
+                    SeasonDriverId = driver.Id,
+                    FirstName = driver.Driver.FirstName,
+                    LastName = driver.Driver.LastName,
+                    Nationality = driver.Driver.Country,
+                    Number = driver.Number,
+                    Role = driver.TeamRole,
+
+                    SeasonTeamId = team.Id,
+                    TeamName = team.Name,
+                    Colour = team.Colour,
+                    Accent = team.Accent,
+
+                    ManufacturerId = manufacturer.Id,
+                    ManufacturerName = manufacturer.Name,
+                    ManufacturerColour = manufacturer.Colour,
+                    ManufacturerAccent = manufacturer.Accent,
+
+                    QualyPower = totalPower + driverTraits.Sum(e => e.QualifyingPace),
+                    RacePower = totalPower + driverTraits.Sum(e => e.RacePace),
+                    Attack = driver.Attack + driverTraits.Sum(e => e.Attack),
+                    Defense = actualDefense,
+                    DriverReliability = driver.Reliability + driverTraits.Sum(e => e.DriverReliability) + climate.ReliablityModifier,
+                    CarReliability = team.Reliability + driverTraits.Sum(e => e.CarReliability),
+                    EngineReliability = engine.Reliability + driverTraits.Sum(e => e.EngineReliability),
+                    WearMinMod = driverTraits.Sum(e => e.WearMin),
+                    WearMaxMod = driverTraits.Sum(e => e.WearMax),
+                    RngMinMod = driverTraits.Sum(e => e.RngMin) - climate.RngModifier,
+                    RngMaxMod = driverTraits.Sum(e => e.RngMax) + climate.RngModifier,
+
+                    LapScores = result.LapScores?.ToList() ?? new()
+                };
+
+            if (!climate.IsWet)
+            {
+                raweDriver.LifeBonus = manufacturer.Pace;
+                raweDriver.WearMinMod += manufacturer.WearMin;
+                raweDriver.WearMaxMod += manufacturer.WearMax;
+            }
+
+            rawecekDrivers.Add(raweDriver);
+        }
+    }
+
+    private async Task PickStrategy(long resultId)
     {
         var parameters = new DialogParameters 
             {
                 ["ResultId"] = resultId,
-                ["Tyres"] = Tyres,
+                ["Tyres"] = tyres,
             };
 
         var dialog = await _dialogService.ShowAsync<TyrePicker>("Set tyre", parameters);
